--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Developer Portfolio. All rights reserved.</p>
+        <p>&copy; 2024 Emil Hashan. All rights reserved.</p>
     </footer>
 
     <script>
