--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        *{
+            text-decoration: none;
+            
+        }
         body {
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
@@ -163,7 +167,7 @@
 
 <body>
     <header>
-        <h1>Emil Hashan | IOT Developer</h1>
+        <h1>Sachith Emil | web developer </h1>
         <nav>
             <i class="fas fa-bars menu-icon" id="menuIcon"></i>
             <div class="dropdown-content" id="dropdownMenu">
@@ -181,7 +185,7 @@
             <img src="https://cdnb.artstation.com/p/assets/images/images/046/105/347/large/vi-t-thai-t-243671532-10165559953660608-1192125926056129024-n.jpg?1644318536" alt="Profile picture">
             <p>Hi, I'm Emil, a passionate developer skilled in Embedded software engineering and Internet of Things .</p>
             <div class="card">
-                <p>Education : <a>test test test test</a></p>
+                <p>Education : <a href="https://www.freecodecamp.org/certification/sachithhashan/responsive-web-design">freecodecamp.org</a></p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/your-profile" target="_blank" title="LinkedIn Profile">
                         <span class="fab fa-linkedin"></span>
@@ -205,12 +209,12 @@
                     <p>Flask, Django, Pygame frameworks for web and game development.</p>
                 </div>
                 <div class="card">
-                    <p><strong>C#</strong></p>
-                    <p>Backend services and object-oriented programming.</p>
+                    <p><strong>JavaScript</strong></p>
+                    <p>frontend development</p>
                 </div>
                 <div class="card">
-                    <p><strong>Arduino</strong></p>
-                    <p>Arduino programming and circuit building.</p>
+                    <p><strong>Node JS</strong></p>
+                    <p>backend web programming</p>
                 </div>
             </div>
         </section>
