--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
             <div class="card">
                 <p>Education : <a href="https://www.freecodecamp.org/certification/sachithhashan/responsive-web-design">freecodecamp.org</a></p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/your-profile" target="_blank" title="LinkedIn Profile">
+                    <a href="#" target="_blank" title="LinkedIn Profile">
                         <span class="fab fa-linkedin"></span>
                     </a>
-                    <a href="https://github.com/your-username" target="_blank" title="GitHub Profile">
+                    <a href="https://github.com/Emil-pix" target="_blank" title="GitHub Profile">
                         <span class="fab fa-github"></span>
                     </a>
                 </div>
