--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <section id="about" class="section">
             <h2>About Me</h2>
             <img src="https://cdnb.artstation.com/p/assets/images/images/046/105/347/large/vi-t-thai-t-243671532-10165559953660608-1192125926056129024-n.jpg?1644318536" alt="Profile picture">
-            <p>Hi, I'm Emil, a passionate developer skilled in web development and cyber security .</p>
+            <p>Hi, I'm Emil. 17 years old, a passionate developer skilled in web development and cyber security .</p>
             <div class="card">
                 <p>Education : <a href="https://www.freecodecamp.org/certification/sachithhashan/responsive-web-design">freecodecamp.org</a></p>
                 <div class="social-icons">
