--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <body>
     <header>
-        <h1>Sachith Emil | web developer </h1>
+        <h1>Sachith Emil | web developer | Digital Marketer </h1>
         <nav>
             <i class="fas fa-bars menu-icon" id="menuIcon"></i>
             <div class="dropdown-content" id="dropdownMenu">
@@ -182,8 +182,8 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <img src="https://cdnb.artstation.com/p/assets/images/images/046/105/347/large/vi-t-thai-t-243671532-10165559953660608-1192125926056129024-n.jpg?1644318536" alt="Profile picture">
-            <p>Hi, I'm Emil. 17 years old, a passionate developer skilled in web development and cyber security .</p>
+            <img src="https://i.pinimg.com/736x/f5/7f/ca/f57fcac76a7e1858220444e4dec55e90.jpg" alt="Profile picture">
+            <p>Hi, I'm Emil. passionate developer skilled in web development and cyber security .</p>
             <div class="card">
                 <p>Education : <a href="https://www.freecodecamp.org/certification/sachithhashan/responsive-web-design">freecodecamp.org</a></p>
                 <div class="social-icons">
@@ -240,7 +240,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Emil Hashan. All rights reserved.</p>
+        <p>&copy; 2025 Emil Hashan. All rights reserved.</p>
     </footer>
 
     <script>
